# gryag-bot

./: .env.docker.example  .env.example  .gitignore  ADMIN_GUIDE.md  DOCKER_AND_THROTTLING_IMPLEMENTATION.md  DOCKER_GUIDE.md  DOCKER_READY.md  Dockerfile  GOOGLE_SEARCH_INTEGRATION.md  GOOGLE_SEARCH_SETUP.md  GROUP_CHAT_GUIDE.md  README.md  README_DOCKER.md  README_UK.md  SAFETY_SETTINGS_REPORT.md  SEARCH_FIX_REPORT.md  SEMANTIC_SEARCH_GUIDE.md  TELEGRAM_BOT_INSTRUCTIONS.md  WINDOWS_QUICKSTART.md  deploy.ps1  deploy.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  test-docker-integration.js  test-google-search.js  test-phrases.js  test-query-extraction.js  test-safety-settings.js  test-search-full.js  test-search-no-links.js  test-search.js  test-semantic-search.js  test-simple-search.js  test-throttling-system.js  test-triggers.js  test-wiki.js  throttle-test.js
.github/: copilot-instructions.md
.github/workflows/: docker.yml  semantic-tests.yml
.specstory/history/: 2025-08-02_15-18Z-you-are-an-expert-telegram-bot-developer-generate.md  (+6 more)
config/: bot.js
gryag/: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
gryag/app/: __init__.py  config.py  main.py  persona.py
gryag/app/handlers/: __init__.py  admin.py  chat.py
gryag/app/middlewares/: __init__.py  chat_meta.py  throttle.py
gryag/app/services/: __init__.py  context_store.py  gemini.py  media.py  triggers.py
gryag/db/: schema.sql
scripts/: auto-update.sh  healthcheck.js
src/: app.js
tests/: test_context_store.py  test_triggers.py
(+12 files in other folders)
